crates/anodized/tests/compile_fail/struct_invalid_spec.stderr
error: `requires` parameter is not supported here
 --> tests/compile_fail/struct_invalid_spec.rs:6:5
  |
6 |     requires: self.x > 0.0,
  |     ^^^^^^^^

error: `captures` parameter is not supported here
 --> tests/compile_fail/struct_invalid_spec.rs:8:5
  |
8 |     captures: self.x as old_x,
  |     ^^^^^^^^

error: `binds` parameter is not supported here
 --> tests/compile_fail/struct_invalid_spec.rs:9:5
  |
9 |     binds: ret_val,
  |     ^^^^^

error: `ensures` parameter is not supported here
  --> tests/compile_fail/struct_invalid_spec.rs:10:5
   |
10 |     ensures: self.y > 0.0,
   |     ^^^^^^^
